--- a/README.adoc
+++ b/README.adoc
@@ -19,3 +19,9 @@ Chronicle Bytes has a similar purpose to Java NIO’s ByteBuffer with some exten
 == Message Types
 
 https://github.com/OpenHFT/Chronicle-Accelerate/blob/master/rfc/XCLBlockChain.adoc[Details on how the messages are used]
+
+== Region Codes
+
+Each service is designated to a region or a set of regions. Region codes are based on ISO-3166 region codes with some additional services.
+
+https://github.com/OpenHFT/Chronicle-Accelerate/blob/master/rfc/XCLRegionCodes.adoc[Further details on region codes can be found here]
