--- a/rfc/XCLBase32.adoc
+++ b/rfc/XCLBase32.adoc
@@ -1,20 +1,19 @@
 = XCLBase32 specification
 Peter Lawrey
 
-XCLBase32 is an extension of hexa-decimal for encoding a string of bytes..
+XCLBase32 is an extension of hexa-decimal for encoding a string of bytes.
 
 There are Base32 specifications such as https://tools.ietf.org/html/rfc4648[IETF - RFC4648] for encoding a string of bytes
-which starts at the highest bits and includes the length of bytes
-and the byte length of any training zeros are not important. As such encoding is aligned to the highest bits.
+which starts at the highest bits and includes the length of bytes; the byte length of any training zeros is not important. As such encoding is aligned to the highest bits.
 
 One of the aims is to produce numbers which can also be used to form words.
 
 == Extended Hexadecimal
 
-The encoding is the same as base16, with the rest of the alphabet except
+The encoding is the same as base16, with the rest of the alphabet except:
 
-- l and O as they can be confused with 1 and 0
-- q and x as these are rare letters
+- l and O as they can be confused with 1 and 0.
+- q and x as these are rare letters.
 
 |===
 | 0, o, O =  0 | 1, l, L =  1 | 2 =  2 | 3 =  3
@@ -33,7 +32,7 @@ e.g. A and a are 10, 9, q and Q are 9
 == Non ASCII extensions
 
 For unicode characters above 128, the character is romanized as either 1 or two encoded tokens as above.
-If the romanized character would be more than 2 letters, the first and last letters is taken.
+If the romanized character would be more than 2 letters, the first and last letters are taken.
 
 .ALPHABETIC_PRESENTATION_FORMS
 |===
