--- a/README.adoc
+++ b/README.adoc
@@ -24,4 +24,14 @@ https://github.com/OpenHFT/Chronicle-Accelerate/blob/master/rfc/XCLBlockChain.ad
 
 Each service is designated to a region or a set of regions. Region codes are based on ISO-3166 region codes with some additional services.
 
-https://github.com/OpenHFT/Chronicle-Accelerate/blob/master/rfc/XCLRegionCodes.adoc[Further details on region codes can be found here]
+https://github.com/OpenHFT/Chronicle-Accelerate/blob/master/rfc/XCLRegionCodes.adoc[Further details on region codes]
+
+== XCLBase32 Specification
+
+XCLBase32 is an extension of hexa-decimal for encoding a string of bytes.
+
+There are Base32 specifications such as IETF - RFC4648 for encoding a string of bytes which starts at the highest bits and includes the length of bytes; the byte length of any training zeros is not important. As such encoding is aligned to the highest bits.
+
+One of the aims is to produce numbers which can also be used to form words.
+
+https://github.com/OpenHFT/Chronicle-Accelerate/blob/master/rfc/XCLBase32.adoc[Further details on XCLBase32 Specification]
